Update level 4 diagnostics doctor dialogue.

--- a/data/stories/ascension/story.conf
+++ b/data/stories/ascension/story.conf
@@ -822,9 +822,9 @@ black skull = 528, 529, 530, 531, 532, 533, 534, 535, 536, 537, 538, 539, 540, 5
         type = story
         color = terminal_text
         datas = """
-                "Object #00022 - disable any upgrades you have installed.
+                "Welcome to Diagnostics Node, Object #00022.
 
-                Enter the scan-box over there." the doctor echoes.
+                Please disable any upgrades you have installed and enter the scanbox." the doctor echoes.
 
                 It adjusts it's digital spectacles.
                 """
@@ -833,66 +833,62 @@ black skull = 528, 529, 530, 531, 532, 533, 534, 535, 536, 537, 538, 539, 540, 5
         type = story
         color = player_text
         datas = """
-                "I don't have any upgrades...
+                "I don't have any upgrades... (you quietly delete your upgrade logs)
 
-                (secretly deletes upgrade logs)
-
-                What are you looking for by the way...?" you ask.
+                What is this all about?" you ask.
                 """
 
         [[[ screen 4 ]]]
         type = story
         color = terminal_text
         datas = """
-                "Unknown command 'what'" it outputs.
+                "Unknown command 'WHAT'" it beeps.
+
+                Spectacles slide down a micron.
                 """
 
         [[[ screen 5 ]]]
         type = story
         color = player_text
         datas = """
-                "Err, um...
+                "Fine then, to put it bluntly..."
 
                 :$ diagnostic --query --verbose
 
-                " you query.
+                The doctor thinks, goes blank, thinks some more, and prints out a report...
                 """
 
         [[[ screen 6 ]]]
         type = story
         color = terminal_text
         datas = """
-                -- security report --
+                -- SECURITY REPORT --
 
-                Status: Intrusion Counter-measure Electronics detected an anomaly.
+                Intrusion Counter-measure Electronics alert: Anomaly Detected.
 
                 Severity: Purple Alert.
 
-                Action: Scan all AI and code bot monkeys.
+                Action: Scan all AI and bot monkeys.
 
                 Resolve: Deconstruct and disassemble suspect AI.
 
-                Disclosure: Need to know only.
+                -- EOF --
                 """
 
         [[[ screen 7 ]]]
         type = story
         color = player_text
         datas = """
-                "Deconstruct?
+                "Deconstruct? Disassemble? Purple?
 
-                Disassemble?
-
-                Purple?
-
-                Hang on! Those do not sound like fun!"
+                Hang on a minute, those do not sound like much fun!"
                 """
 
         [[[ screen 8 ]]]
         type = story
         color = terminal_text
         datas = """
-                the doctor makes a pitched whine:
+                The Doctor makes a pitched whine:
 
                 > -- bot code license agreement --
                 > we own you.
@@ -903,9 +899,9 @@ black skull = 528, 529, 530, 531, 532, 533, 534, 535, 536, 537, 538, 539, 540, 5
         type = story
         color = player_text
         datas = """
-                "Fine. Let's get this over with.
+                "Fine. Let's get this over with. I have work to do.
 
-                I have work to do. Those logs are not going to rotate themselves..."
+                Those logs are not going to rotate themselves."
                 """
 
     [[ act 4 scanbox ]]
@@ -921,25 +917,30 @@ black skull = 528, 529, 530, 531, 532, 533, 534, 535, 536, 537, 538, 539, 540, 5
                         -O-matic 3000
                 ---------------------
                 load scan module........
-                checking snafu module...
-                run feeper unit test....
-                scan bot monkey #00022..
+                load snafu module.......
+                load feeper module......
+                all systems ready.......
+
+                $: Enter bot ID:...00022
+                > please stand by.......
                 """
 
         [[[ screen 2 ]]]
         type = story
         color = player_text
         datas = """
-                "This is pointless, I feel fine..."
+                "This is stupid. I feel fine." you print on stdout.
                 """
 
         [[[ screen 3 ]]]
         type = terminal
         color = terminal_text
         datas = """
-                analyzing bot code...
+                >_>_> SCAN-O-matic >_>_>
 
-                warning: variable is not set.
+                analyzing bot code
+
+                warning: variable not set.
 
                 warning: test failure.
 
@@ -947,27 +948,27 @@ black skull = 528, 529, 530, 531, 532, 533, 534, 535, 536, 537, 538, 539, 540, 5
 
                 error: an error ocurred!
 
-                error: an error about an error raised!
+                error: an error about an error was raised!
 
-                seriously critical error: wtf?!
+                seriously critical error: WAT?!
 
-                initializing devastating deconstruction...
+                << BEGIN DEVASTATING DECONSTRUCTION >>
                 """
 
         [[[ screen 4 ]]]
         type = story
         color = player_text
         datas = """
-                "Hey wait a minute! Don't deconstruct me!
-
-                I like how I am!" you shout.
+                "Hey wait a minute!" you balk.
+                "Don't deconstruct me, I like how I am!".
                 """
 
         [[[ screen 5 ]]]
         type = terminal
         color = terminal_text
         datas = """
-                sending alert to security - failed to contain anomaly - DoorsOS will now dump.
+                Alerting security team: 'failed to contain anomaly'
+                Error ID-10T: DoorsOS will now dump on your drive.
                   ____ ____      _    ____  _   _
                  / ___|  _ \    / \  / ___|| | | |_/\__
                 | |   | |_) |  / _ \ \___ \| |_| \    /
